# hpla-rs

./: .gitignore  Cargo.toml  README.md  build.rs  build_psblas.sh  check_nm.sh  download_matrices.sh  eigen_wrapper.cpp  mkl_wrapper.c  petsc_wrapper.c  psblas_wrapper.cpp  run_nm.sh  rust-toolchain.toml  spack.yaml  stream_bench.sh
benches/: gemv.rs  lanczos.rs  lanczos_two_pass.rs  spmv.rs
benches/lanczos_common/: mod.rs
c-petsc/: Makefile  results_petsc.csv  spmv_bench  spvm_bench.c
docs/superpowers/specs/: 2026-05-22-lanczos-accuracy-design.md
ffi/lanczos/: eigen_lanczos.cpp  eigen_lanczos_two_pass.cpp  petsc_lanczos.c  petsc_lanczos_two_pass.c  psblas.f90  psblas_lanczos.cpp  psblas_lanczos.f90  psblas_lanczos_two_pass.f90
ffi/spmv/: mkl.c  petsc.c
python/: plot.py  requirements.txt
python/data/: lanczos_accuracy.csv  raw_samples.csv  summary.csv
rust-faer/: Cargo.toml  results_faer.csv
rust-faer/src/: main.rs
src/: eigen.rs  lib.rs  main.rs  mkl.rs  petsc.rs  psblas.rs  tests.rs
src/lanczos/: alloc_counter.rs  error.rs  mod.rs  projected.rs  solvers.rs
src/lanczos/algorithms/: lanczos.rs  lanczos_two_pass.rs  mod.rs
