[package]
name = "hpla-rs"
version = "0.1.0"
edition = "2024"
authors = ["SpMV Benchmark Suite"]
description = "High-performance linear algebra, in Rust"
readme = "README.md"
license = "MIT"

[dependencies]
faer = { version = "0.24", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
matrix-market-rs = "0.1.3"
thiserror = "2.0"
anyhow = "1"

[dev-dependencies]
criterion = "0.5"
rand = "0.9"

[build-dependencies]
cc = "1.0"

[profile.release]
# Maximum optimization level
opt-level = 3

# Link-Time Optimization: "fat" enables full cross-crate LTO
lto = "fat"

# Single codegen unit forces all code into one LLVM module
codegen-units = 1

# Abort on panic removes unwinding code, reducing binary size
panic = "abort"

# Disable debug info in release builds
debug = false

[profile.release.package."*"]
# Apply same optimizations to dependencies
opt-level = 3

# Benchmark-specific profile with even more aggressive settings
[profile.bench]
inherits = "release"
debug = false

[[bench]]
name = "gemv"
harness = false

[[bench]]
name = "lanczos"
harness = false
