[package]
name = "hpla-rs"
version = "0.1.0"
edition = "2024"
authors = [
    "Fabio Durastante <fabio.durastante@unipi.it>",
    "Luca Lombardo <l.lombardo11@studenti.unipi.it>",
]
description = "Single-threaded sparse kernel benchmarks across faer, PETSc, Eigen, MKL, and PSBLAS: SpMV and symmetric Lanczos for exp(-A)b."
readme = "README.md"
license = "MIT"
repository = "https://github.com/lukefleed/hpla-rs"
keywords = ["sparse", "spmv", "lanczos", "benchmark", "hpc"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
faer = { version = "0.24", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
matrix-market-rs = "0.1.3"
thiserror = "2.0"
anyhow = "1"
rand = "0.9"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
debug-assertions = false
strip = "symbols"

[profile.release.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = false

[[bench]]
name = "spmv"
harness = false

[[bench]]
name = "lanczos"
harness = false

[[bench]]
name = "lanczos_two_pass"
harness = false

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "deny", priority = 10 }
